backbone. needs to fix ALL links and figure out how to merge branches because gh-pages is being stupid

--- a/favverse.html
+++ b/favverse.html
@@ -15,5 +15,10 @@
                 <a href="favverse.html">Favorite Verses</a>
             
             </div>
+        <div id="everything">
+        <p1>"Hate stirs up strife, but love covers all offenses." Proverbs 10:12</p1>
+        <p2>"This is my comfort in my affliction, that your promise gives me life." Psalm 119:50</p2>
+        <p3>"I love the LORD, because he has heard my voice and my pleas for mercy. Because he inclined his ear to me, therefore I will call on him as long as I live." Psalm 116:1-2</p3>
+            </div>
     </body>
 </html>
