--- a/interestsmeg.html
+++ b/interestsmeg.html
@@ -15,5 +15,6 @@
                 <a href="favverse.html">Favorite Verses</a>
             
             </div>
+        <p>I really enjoy backpacking and other outdoor hobbies</p>
     </body>
 </html>
