--- a/aboutmeg.html
+++ b/aboutmeg.html
@@ -15,9 +15,11 @@
                 <a href="favverse.html">Favorite Verses</a>
             
             </div>
+        <div id="everything">
         <p1>Hello! My name is Megan Kroeker. I am a senior at Fresno Pacific University. My goal is to graduate in Spring of 2021 with a BS in Applied Mathematics and a Minor in Software Engineering. My professional desires are to work in some capacity right after graduation. I am interested in operations research, business analytics, and incoorporating software in engineering. I also enjoy being outside, so I would prefer a job that allows me to be mobile.</p1>
         <div id="aboutmepic">
             <img src="fpu.png">
         </div>
+            </div>
     </body>
 </html>
