changed link names

--- a/favverse.html
+++ b/favverse.html
@@ -9,10 +9,10 @@
     <body>
         <header>Favorite Verses</header>
         <div id="mySidenav" class="sidenav">
-                <a href="aboutmeg.html">Overview/Summary</a>
-                <a href="workedumeg.html">Education and Work</a>
-                <a href="interestsmeg.html">Interests</a>
-                <a href="favverse.html">Favorite Verses</a>
+                <a href="https://mkroek27.github.io/CSSE112/aboutmeg">Overview/Summary</a>
+                <a href="https://mkroek27.github.io/CSSE112/workedumeg">Education and Work</a>
+                <a href="https://mkroek27.github.io/CSSE112/interestsmeg">Interests</a>
+                <a href="https://mkroek27.github.io/CSSE112/favverse">Favorite Verses</a>
             
             </div>
     </body>
