--- a/aboutmeg.html
+++ b/aboutmeg.html
@@ -9,10 +9,10 @@
     <body>
         <header>Overview/Summary</header>
         <div id="mySidenav" class="sidenav">
-                <a href="aboutmeg.html">Overview/Summary</a>
-                <a href="workedumeg.html">Education and Work</a>
-                <a href="interestsmeg.html">Interests</a>
-                <a href="favverse.html">Favorite Verses</a>
+                <a href="https://mkroek27.github.io/CSSE112/aboutmeg">Overview/Summary</a>
+                <a href="https://mkroek27.github.io/CSSE112/workedumeg">Education and Work</a>
+                <a href="https://mkroek27.github.io/CSSE112/interestsmeg">Interests</a>
+                <a href="https://mkroek27.github.io/CSSE112/favverse">Favorite Verses</a>
             
             </div>
         <p1>Hello! My name is Megan Kroeker. I am a senior at Fresno Pacific University. My goal is to graduate in Spring of 2021 with a BS in Applied Mathematics and a Minor in Software Engineering. My professional desires are to work in some capacity right after graduation. I am interested in operations research, business analytics, and incoorporating software in engineering. I also enjoy being outside, so I would prefer a job that allows me to be mobile.</p1>
