udated lists and pages to follow prompt

--- a/aboutmeg.html
+++ b/aboutmeg.html
@@ -19,6 +19,7 @@
         <p1>Hello! My name is Megan Kroeker. I am a senior at Fresno Pacific University. My goal is to graduate in Spring of 2021 with a BS in Applied Mathematics and a Minor in Software Engineering. My professional desires are to work in some capacity right after graduation. I am interested in operations research, business analytics, and incoorporating software in engineering. I also enjoy being outside, so I would prefer a job that allows me to be mobile.</p1>
         <div id="aboutmepic">
             <img src="fpu.png">
+            <img src="profilepic.jpeg">
         </div>
             </div>
     </body>
