--- a/interestsmeg.html
+++ b/interestsmeg.html
@@ -16,5 +16,15 @@
             
             </div>
         <p>I really enjoy backpacking and other outdoor hobbies</p>
+        <h2>Other things I enjoy:</h2>
+        <ul>
+            <li>Swimming</li>
+            <li>Water Polo <iframe width="420" height="315"
+src="https://youtu.be/rqTySKceNoM">
+</iframe></li>
+            <li>Eating new kinds of food</li>
+            <li>Wake Surfing</li>
+            <li>Shopping</li>
+        </ul>
     </body>
 </html>
