--- a/workedumeg.html
+++ b/workedumeg.html
@@ -25,10 +25,10 @@
             <p>Work Experience</p>
             <ul>
                 <li>Babysitting</li>
-                <li>Student Assistant, Office of Continuing Education, Fresno Pacific University</li>
-                <li>Freshman Peer Mentor, Student Life, Fresno Pacific University</li>
-                <li>Math/Physics/Software Engineering Tutor, Academic Success Center, Fresno Pacific Unversity</li>
-                <li>Server, Butterfish California Poke</li>
+                <li>Student Assistant, Office of Continuing Education, Fresno Pacific University (June 2017-May 2019): Paulette Matsubara <a href="https://ce.fresno.edu">CE Website</a></li>
+                <li>Freshman Peer Mentor, Student Life, Fresno Pacific University (current): Lynn Reinhold <a href="https://www.fresno.edu/campus-life">Campus Life Website</a></li>
+                <li>Math/Physics/Software Engineering Tutor, Academic Success Center, Fresno Pacific Unversity (current): Francisco Carrillo <a href="https://www.fresno.edu/students/academic-success-center">ASC Website</a></li>
+                <li>Server, Butterfish California Poke(current): Jeff Sanudo <a href="http://butterfishpoke.com/">Butterfish Website</a></li>
             </ul>
         
         </div>
