--- a/aboutmeg.html
+++ b/aboutmeg.html
@@ -20,6 +20,8 @@
         <div id="aboutmepic">
             <img src="fpu.png">
         </div>
-            </div>
+           
+                <footer>Megan Kroeker <a href="mailto:mjk4@students.fresno.edu">EMAIL</a>, <a href="https://www.linkedin.com/in/megan-kroeker/">LinkedIn</a></footer>
+             </div>
     </body>
 </html>
