--- a/interestsmeg.html
+++ b/interestsmeg.html
@@ -15,6 +15,9 @@
                 <a href="https://mkroek27.github.io/CSSE112/favverse">Favorite Verses</a>
             
             </div>
+        <div id="everything">
         <p>I really enjoy backpacking and other outdoor hobbies</p>
+                <footer>Megan Kroeker <a href="mailto:mjk4@students.fresno.edu">EMAIL</a>, <a href="https://www.linkedin.com/in/megan-kroeker/">LinkedIn</a></footer>
+            </div>
     </body>
 </html>
