--- a/workedumeg.html
+++ b/workedumeg.html
@@ -30,7 +30,8 @@
                 <li>Math/Physics/Software Engineering Tutor, Academic Success Center, Fresno Pacific Unversity</li>
                 <li>Server, Butterfish California Poke</li>
             </ul>
-        
+                <footer>Megan Kroeker <a href="mailto:mjk4@students.fresno.edu">EMAIL</a>, <a href="https://www.linkedin.com/in/megan-kroeker/">LinkedIn</a></footer>
         </div>
+        
     </body>
 </html>
