--- a/favverse.html
+++ b/favverse.html
@@ -19,6 +19,8 @@
         <p1>"Hate stirs up strife, but love covers all offenses." Proverbs 10:12</p1>
         <p2>"This is my comfort in my affliction, that your promise gives me life." Psalm 119:50</p2>
         <p3>"I love the LORD, because he has heard my voice and my pleas for mercy. Because he inclined his ear to me, therefore I will call on him as long as I live." Psalm 116:1-2</p3>
+            
+            <footer>Megan Kroeker <a href="mailto:mjk4@students.fresno.edu">EMAIL</a>, <a href="https://www.linkedin.com/in/megan-kroeker/">LinkedIn</a></footer>
             </div>
     </body>
 </html>
