--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
                
            
         </header>
-        <div id="main">
+        <div id="everything">
         <div id="photoMeg">
              <p1> Utilize the sidebar navigation to the left to learn more about me!</p1>
             <p></p>
         <img src="profilepic.jpeg">
             </div>
        </div>
+        <footer>Megan Kroeker <a href="mailto:mjk4@students.fresno.edu">EMAIL</a>, <a href="https://www.linkedin.com/in/megan-kroeker/">LinkedIn</a></footer>
     </body>
 </html>
