--- a/interestsmeg.html
+++ b/interestsmeg.html
@@ -15,6 +15,7 @@
                 <a href="https://mkroek27.github.io/CSSE112/favverse">Favorite Verses</a>
             
             </div>
+        <div id="everything">
         <p>I really enjoy backpacking and other outdoor hobbies</p>
         <h2>Other things I enjoy:</h2>
         <ul>
@@ -26,5 +27,8 @@ src="https://youtu.be/rqTySKceNoM">
             <li>Wake Surfing</li>
             <li>Shopping</li>
         </ul>
+            
+            <footer>MEGAN KROEKER <a href="mailto: mjk4@students.fresno.edu">EMAIL</a> <a href="https://www.linkedin.com/in/megan-kroeker/">LINKEDIN</a></footer>
+            </div>
     </body>
 </html>
