--- a/workedumeg.html
+++ b/workedumeg.html
@@ -30,7 +30,7 @@
                 <li>Math/Physics/Software Engineering Tutor, Academic Success Center, Fresno Pacific Unversity (current): Francisco Carrillo <a href="https://www.fresno.edu/students/academic-success-center">ASC Website</a></li>
                 <li>Server, Butterfish California Poke(current): Jeff Sanudo <a href="http://butterfishpoke.com/">Butterfish Website</a></li>
             </ul>
-        
+        <footer>MEGAN KROEKER <a href="mailto: mjk4@students.fresno.edu">EMAIL</a> <a href="https://www.linkedin.com/in/megan-kroeker/">LINKEDIN</a></footer>
         </div>
     </body>
 </html>
